--- a/Liverpool/Venetian.html
+++ b/Liverpool/Venetian.html
@@ -2133,6 +2133,27 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i44.image.css:image/base/css*/
+#i44 { opacity: 1; }
+/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
+        -ms-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
+        transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
+}
+/*#/#*//*#i75.image.css:image/base/css*/
+#i75 { opacity: 1; }
+/*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
+#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 32px;
+        -ms-transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
+        transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
+}
+/*#/#*//*#i71.shape.css:shape/base/css*/
+#i71 { background-color: ; opacity: 1;
+}
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
     position: absolute;
@@ -2151,8 +2172,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i44.image.css:image/base/css*/
-#i44 { opacity: 1; }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
@@ -2220,12 +2239,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
-        -ms-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
+/*#/#*//*#i71.i72.positioning.css:positioning/base/css.2*/
+#i71 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 25.208330154418945%;
+        -ms-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2245,31 +2264,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(27px, 303px) rotate(0deg);
         transform: translate(0, 0) translate(27px, 303px) rotate(0deg);
 }
-/*#/#*//*#i75.image.css:image/base/css*/
-#i75 { opacity: 1; }
-/*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
-#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 32px;
-        -ms-transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
-        transform: translate(0, 0) translate(101px, 413px) rotate(0deg);
-}
-/*#/#*//*#i71.shape.css:shape/base/css*/
-#i71 { background-color: ; opacity: 1;
-}
-/*#/#*//*#i71.i72.positioning.css:positioning/base/css.2*/
-#i71 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 25.208330154418945%;
-        -ms-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
+<!--#/#--><!--#i44.image.html:image/html-->
+<img id="i44" src="https://i.imgur.com/DRu5D6K.jpg"/>
+<!--#/#--><!--#i75.image.html:image/html-->
+<img id="i75" src="https://i.imgur.com/GnBqvxs.png"/>
+<!--#/#--><!--#i71.shape.html:shape/html-->
+<div id="i71"></div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2280,22 +2286,39 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i6" src="https://i.imgur.com/aN1dY4R.png"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/DRu5D6K.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/EZfqNTK.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡No dejes pasar la #GranBarata de Invierno!</div>
+<div id="i63">¡No dejes pasar La Gran Barata de Invierno!</div>
 <!--#/#--><!--#i68.text.html:text/html-->
 <div id="i68">¡Es hora de venir a Liverpool El Dorado con promociones hasta el 60% de descuento !</div>
-<!--#/#--><!--#i75.image.html:image/html-->
-<img id="i75" src="https://i.imgur.com/GnBqvxs.png"/>
-<!--#/#--><!--#i71.shape.html:shape/html-->
-<div id="i71"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i44.image.js:image/base/js*/
+
+/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
+bmShow('i44');
+/*#/#*//*#i75.image.js:image/base/js*/
+
+/*#/#*//*#i75.i76.positioning.js:positioning/base/js.2*/
+bmShow('i75');
+/*#/#*//*#i71.i72.positioning.js:positioning/base/js.2*/
+bmShow('i71');
+/*#/#*//*#i71.i77.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i71');
+
+el.addEventListener('click', function(e){
+    /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/oNVBCFSSdVH2'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2349,11 +2372,8 @@ if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
 /*#/#*//*#i57.i79.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/pg/liverpoolmexico/posts/?ref=page_internal'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*//*#i44.image.js:image/base/js*/
-
-/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
-bmShow('i44');
+   
+    
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2362,25 +2382,6 @@ bmShow('i16');
 bmShow('i63');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i75.image.js:image/base/js*/
-
-/*#/#*//*#i75.i76.positioning.js:positioning/base/js.2*/
-bmShow('i75');
-/*#/#*//*#i71.i72.positioning.js:positioning/base/js.2*/
-bmShow('i71');
-/*#/#*//*#i71.i77.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i71');
-
-el.addEventListener('click', function(e){
-    /*#i77.i78.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/oNVBCFSSdVH2'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2398,6 +2399,20 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i44.image.meta:image/meta*/
+name: DRu5D6K.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i75.image.meta:image/meta*/
+name: GnBqvxs.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i75.i76.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i71.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i71.i72.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2409,11 +2424,6 @@ name: hKCY5T9.png; fileId: ; sourceTypeId: externalUrl;
 name: aN1dY4R.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i44.image.meta:image/meta*/
-name: DRu5D6K.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: EZfqNTK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -2426,14 +2436,5 @@ data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
 name: ¡Es hora de venir a Liverpool El Dorado con promociones hasta el 60% de descuento !; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i75.image.meta:image/meta*/
-name: GnBqvxs.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i75.i76.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i71.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i71.i72.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
