--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-    <title>Properati-geo</title>
+    <title>Autoniza</title>
     <style>
         .PapaJohnFijo a,
         .PapaJohnFijo a:hover {
