--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -228,7 +228,7 @@
 
 <body class="PapaJohnFijo" style="margin:0px;">
     <div class="te-container">
-        <a href="https://www.properati.com.co/proyectos/irati#sug_src" target="_blank">
+        <a href="https://goo.gl/maps/FSZ4JWosa912" target="_blank">
             <div id="te-wrapper" class="te-wrapper"> 
             
 
