--- a/Formatos ADS/300 X 250/fade-galega.html
+++ b/Formatos ADS/300 X 250/fade-galega.html
@@ -276,11 +276,12 @@
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px;text-align:left;"> Es galeg@ ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!</span></div>
             <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/5qaaAMk.png" style="height:35px;margin-top:-3px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/dClvdGY.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
 
+           
     <!--<div class="EurowingsFade"></div>
 	<script src="bundle.js"></script>
 	<script>
