--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -234,7 +234,7 @@
 
                          
                 <div class="te-cover"> 
-                <div id="ytplayer" onmouseenter="SetYoutubeVolume(true)" onmouseleave="SetYoutubeVolume(false)">
+                <div id="ytplayer" onmouseenter="SetYoutubeVolume(true)" onmouseleave="SetYoutubeVolume(false)"style="margin-left: -50px;">
            
             </div>
         </div>
@@ -248,7 +248,7 @@
             function onYouTubeIframeAPIReady() {
                 ytplayer = new YT.Player('ytplayer', {
                     height: '250',
-                    width: '430',
+                    width: '300',
                     videoId: 'Jp_t0J5joko',
                     autoplay: 1,
                     playerVars: {
