--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -350,7 +350,7 @@
 <body class="value">
        <div class="te-container">
        
-       <div class="cta" > <span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡¡Pruébalo gratis!! </span></a></div>
+       <div class="cta" > <a href="https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza" target="_blank">  <span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡¡Pruébalo gratis!! </span></a></div>
 
 
        <a href="https://goo.gl/maps/FSZ4JWosa912" target="_blank">
