--- a/Autoniza/Cube.html
+++ b/Autoniza/Cube.html
@@ -741,6 +741,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(152px, 223px) rotate(0deg);
         transform: translate(0, 0) translate(152px, 223px) rotate(0deg);
 }
+/*#/#*//*#i5.i264.image.css:image/base/css*/
+#i264 { opacity: 1; }
+/*#/#*//*#i264.i265.positioning.css:positioning/base/css.2*/
+#i264 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
+        -ms-transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
+        transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -752,15 +761,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i5.i264.image.css:image/base/css*/
-#i264 { opacity: 1; }
-/*#/#*//*#i264.i265.positioning.css:positioning/base/css.2*/
-#i264 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
-        -ms-transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
-        transform: translate(0, 0) translate(71px, 87px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -801,6 +801,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(152px, 231px) rotate(0deg);
         transform: translate(0, 0) translate(152px, 231px) rotate(0deg);
 }
+/*#/#*//*#i6.i268.image.css:image/base/css*/
+#i268 { opacity: 1; }
+/*#/#*//*#i268.i269.positioning.css:positioning/base/css.2*/
+#i268 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
+        -ms-transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
+        transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
+}
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
 }
@@ -840,15 +849,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 222px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 222px) rotate(0deg);
 }
-/*#/#*//*#i6.i268.image.css:image/base/css*/
-#i268 { opacity: 1; }
-/*#/#*//*#i268.i269.positioning.css:positioning/base/css.2*/
-#i268 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
-        -ms-transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
-        transform: translate(0, 0) translate(71px, 137px) rotate(0deg);
-}
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
@@ -877,7 +877,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/ajXFRrI.png"/>
 <!--#/#--><!--#i4.i262.image.html:image/html-->
-<img id="i262" src="https://i.imgur.com/Oq4E3jz.png"/>
+<img id="i262" src="https://i.imgur.com/U9JqwS8.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i188.image.html:image/html-->
@@ -896,10 +896,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i58" src="https://i.imgur.com/hLJ9vFv.png"/>
 <!--#/#--><!--#i5.i260.image.html:image/html-->
 <img id="i260" src="https://i.imgur.com/7BmuNVX.png"/>
+<!--#/#--><!--#i5.i264.image.html:image/html-->
+<img id="i264" src="https://i.imgur.com/sKMRQGk.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
-<!--#/#--><!--#i5.i264.image.html:image/html-->
-<img id="i264" src="https://i.imgur.com/Oq4E3jz.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -912,6 +912,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i196">Quien está subido en una Chevrolet Trailblazer puedes ser tú.</div>
 <!--#/#--><!--#i6.i246.image.html:image/html-->
 <img id="i246" src="https://i.imgur.com/7BmuNVX.png"/>
+<!--#/#--><!--#i6.i268.image.html:image/html-->
+<img id="i268" src="https://i.imgur.com/U9JqwS8.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i248.image.html:image/html-->
@@ -920,8 +922,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i252" src="https://i.imgur.com/bYkyRSv.png"/>
 <!--#/#--><!--#i6.i256.image.html:image/html-->
 <img id="i256" src="https://i.imgur.com/Etsg6aD.png"/>
-<!--#/#--><!--#i6.i268.image.html:image/html-->
-<img id="i268" src="https://i.imgur.com/Oq4E3jz.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -975,7 +975,7 @@ bmShow('i262');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i188.image.js:image/base/js*/
@@ -988,7 +988,7 @@ var el = document.getElementById('i188');
 
 el.addEventListener('click', function(e){
     /*#i202.i203.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1005,7 +1005,7 @@ var el = document.getElementById('i190');
 
 el.addEventListener('click', function(e){
     /*#i204.i205.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1022,7 +1022,7 @@ var el = document.getElementById('i192');
 
 el.addEventListener('click', function(e){
     /*#i206.i207.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1040,13 +1040,6 @@ if ('click' === 'click') {
 
 /*#/#*//*#i260.i261.positioning.js:positioning/base/js.2*/
 bmShow('i260');
-/*#/#*//*#i95.i175.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i95').addEventListener('click', function(e){
-    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/FSZ4JWosa912'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 /*#/#*//*#i5.i264.image.js:image/base/js*/
 
 /*#/#*//*#i264.i265.positioning.js:positioning/base/js.2*/
@@ -1057,13 +1050,20 @@ var el = document.getElementById('i264');
 
 el.addEventListener('click', function(e){
     /*#i266.i267.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i95.i175.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i95').addEventListener('click', function(e){
+    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/FSZ4JWosa912'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1075,11 +1075,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i246.i247.positioning.js:positioning/base/js.2*/
 bmShow('i246');
+/*#/#*//*#i6.i268.image.js:image/base/js*/
+
+/*#/#*//*#i268.i269.positioning.js:positioning/base/js.2*/
+bmShow('i268');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i248.image.js:image/base/js*/
@@ -1092,7 +1096,7 @@ var el = document.getElementById('i248');
 
 el.addEventListener('click', function(e){
     /*#i250.i251.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1109,7 +1113,7 @@ var el = document.getElementById('i252');
 
 el.addEventListener('click', function(e){
     /*#i254.i255.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1126,17 +1130,13 @@ var el = document.getElementById('i256');
 
 el.addEventListener('click', function(e){
     /*#i258.i259.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20necesito%20informaci%C3%B3n%20de%20Autoniza'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i268.image.js:image/base/js*/
-
-/*#/#*//*#i268.i269.positioning.js:positioning/base/js.2*/
-bmShow('i268');
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1188,7 +1188,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i262.image.meta:image/meta*/
-name: Oq4E3jz.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: U9JqwS8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i262.i263.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1227,15 +1227,15 @@ name: 7BmuNVX.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i260.i261.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i264.image.meta:image/meta*/
+name: sKMRQGk.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i264.i265.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i264.image.meta:image/meta*/
-name: Oq4E3jz.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i264.i265.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
@@ -1256,6 +1256,11 @@ name: 7BmuNVX.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i246.i247.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i268.image.meta:image/meta*/
+name: U9JqwS8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i268.i269.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
@@ -1274,11 +1279,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Etsg6aD.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i256.i257.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i268.image.meta:image/meta*/
-name: Oq4E3jz.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i268.i269.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
