--- a/Autoniza/Cube.html
+++ b/Autoniza/Cube.html
@@ -877,7 +877,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/ajXFRrI.png"/>
 <!--#/#--><!--#i4.i262.image.html:image/html-->
-<img id="i262" src="https://i.imgur.com/U9JqwS8.png"/>
+<img id="i262" src="https://i.imgur.com/kZG7iwr.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i188.image.html:image/html-->
@@ -913,7 +913,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i246.image.html:image/html-->
 <img id="i246" src="https://i.imgur.com/7BmuNVX.png"/>
 <!--#/#--><!--#i6.i268.image.html:image/html-->
-<img id="i268" src="https://i.imgur.com/U9JqwS8.png"/>
+<img id="i268" src="https://i.imgur.com/kZG7iwr.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i248.image.html:image/html-->
@@ -1188,7 +1188,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i262.image.meta:image/meta*/
-name: U9JqwS8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: kZG7iwr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i262.i263.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1257,7 +1257,7 @@ customName: false;
 /*#/#*//*#i246.i247.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i268.image.meta:image/meta*/
-name: U9JqwS8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: kZG7iwr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i268.i269.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
