--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -351,7 +351,7 @@
        <div class="te-container">
        
        <div class="cta" > <a href="https://api.whatsapp.com/send?phone=573024404040&amp;text=Hola,%20me%20gustaría%20hacer%20una%20prueba%20de%20manejo.%20¿Que%20necesito%20hacer?" target="_blank"> 
-      <img src="https://i.imgur.com/U9JqwS8.png" style="height: 45px;"></a></div>
+      <img src="https://i.imgur.com/kZG7iwr.png" style="height: 45px;"></a></div>
                
 
 
