--- a/Formatos ADS/320X480/ScrollVideo.html
+++ b/Formatos ADS/320X480/ScrollVideo.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="ad.size" content="width=320, height=480" />
+
+
 <style>
     .HuaweiScroll2 p {
         margin: 0px;
@@ -237,6 +247,10 @@
         -o-transition: all .5s;
     }
 
+    @media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+    /* iPhone 5 only */
+}
+
     @media screen and (max-width: 300px) {
         .HuaweiScroll2 .bzm_wrapper.size_320x480 {
             width: 250px;
@@ -257,6 +271,8 @@
     }
 
 </style>
+</head>
+<body>
 
 
 <div class="HuaweiScroll2" style="margin:0px; background-color:white;">
@@ -368,3 +384,5 @@
     </div>
 </div>
 </div>
+</body>
+</html>
