--- a/Autoniza/Cube.html
+++ b/Autoniza/Cube.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
 <title>HTML5 STUDIO BUILDER: 3D Box v 1.5</title>
-
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="ad.size" content="width=320, height=480" />
 <!-- Adform API Script -->
 <script type="text/javascript">
 document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv='+ Math.random()) +'"><\/script>');
@@ -877,7 +880,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/ajXFRrI.png"/>
 <!--#/#--><!--#i4.i262.image.html:image/html-->
-<img id="i262" src="https://i.imgur.com/kZG7iwr.png"/>
+<img id="i262" src="https://i.imgur.com/w5JfzvW.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i188.image.html:image/html-->
@@ -897,7 +900,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i260.image.html:image/html-->
 <img id="i260" src="https://i.imgur.com/7BmuNVX.png"/>
 <!--#/#--><!--#i5.i264.image.html:image/html-->
-<img id="i264" src="https://i.imgur.com/sKMRQGk.png"/>
+<img id="i264" src="https://i.imgur.com/F61w9cs.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -913,7 +916,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i246.image.html:image/html-->
 <img id="i246" src="https://i.imgur.com/7BmuNVX.png"/>
 <!--#/#--><!--#i6.i268.image.html:image/html-->
-<img id="i268" src="https://i.imgur.com/kZG7iwr.png"/>
+<img id="i268" src="https://i.imgur.com/w5JfzvW.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i248.image.html:image/html-->
@@ -1188,7 +1191,7 @@ customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i262.image.meta:image/meta*/
-name: kZG7iwr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: w5JfzvW.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i262.i263.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1228,7 +1231,7 @@ customName: false;
 /*#/#*//*#i260.i261.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i264.image.meta:image/meta*/
-name: sKMRQGk.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: F61w9cs.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i264.i265.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1257,7 +1260,7 @@ customName: false;
 /*#/#*//*#i246.i247.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i268.image.meta:image/meta*/
-name: kZG7iwr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: w5JfzvW.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i268.i269.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
