--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -355,12 +355,12 @@
             overflow-y: auto;
         }
 
-        .img-news {
+        .value_cover {
             width: 265px;
-            height: 126px;
+            height: 516px;
         }
 
-        .logo-enterp {
+        .logo {
             margin-top: 5px;
             height: 17.5px;
         }
