--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -355,7 +355,7 @@
             overflow-y: auto;
         }
 
-        .value_cover {
+        .value_wrapper {
             width: 265px;
             height: 516px;
         }
