--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -348,7 +348,7 @@
 }
         
          @media screen and (max-width: 300px) {
-        .HuaweiScroll2 .bzm_wrapper.size_320x480 {
+        .value .te-container {
             width: 250px;
             height: 400px;
             background-color: #FFF;
