--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -348,7 +348,7 @@
 }
         
          @media screen and (max-width: 300px) {
-        .value .te-container {
+        .value .te-container .value_wrapper.size_300x250  {
             width: 250px;
             height: 400px;
             background-color: #FFF;
