--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -348,7 +348,7 @@
 }
         
          @media screen and (max-width: 300px) {
-        .value .te-container .value_wrapper.size_300x600  {
+        .value .te-container {
             width: 290px;
             height: 550px;
             background-color: #FFF;
