--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -349,19 +349,19 @@
         
          @media screen and (max-width: 300px) {
         .value .te-container {
-            width: 265px;
-            height: 516px;
+            width: 290px;
+            height: 550px;
             background-color: #FFF;
             overflow-y: auto;
         }
 
-        .value_wrapper {
+        .value_wrapper .value_cover{
             width: 265px;
             height: 516px;
         }
 
         .logo {
-            margin-top: 530px;
+            margin-top: 550px;
             height: 17.5px;
         }
     }
