--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -349,13 +349,13 @@
         
          @media screen and (max-width: 300px) {
         .value .te-container {
-            width: 290px;
-            height: 550px;
+            width: 250px;
+            height: 400px;
             background-color: #FFF;
             overflow-y: auto;
         }
 
-        .value_wrapper .value_cover{
+        .value_wrapper {
             width: 265px;
             height: 516px;
         }
