--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -338,6 +338,29 @@
             border-radius: 20px;
             text-align: center;
         }
+
+         @media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+    /* iPhone 5 only */
+}
+
+        @media screen and (max-width: 480px) {
+            .PapaJohnFijo .te-container .te-wrapper {
+            width: 240px;
+            height: 500px;
+            background-color: #FFF;
+            overflow-y: auto;
+        }
+
+        .te-cover, .te-transition, .te-images {
+            width: 240px;
+            height: 300px;
+        }
+
+        .botonesparacompartir {
+           width: 240px;
+            height: 70px;
+        }
+    }
         
 
 
