--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -343,22 +343,22 @@
     /* iPhone 5 only */
 }
 
-        @media screen and (max-width: 480px) {
-            .PapaJohnFijo .te-container .te-wrapper {
+        @media screen and (max-width: 300px) {
+            .value .te-container .value_wrapper {
             width: 240px;
             height: 500px;
             background-color: #FFF;
             overflow-y: auto;
         }
 
-        .te-cover, .te-transition, .te-images {
+        .value_cover {
             width: 240px;
-            height: 300px;
+            height: 320px;
         }
 
         .botonesparacompartir {
-           width: 240px;
-            height: 70px;
+           width: 18px;
+            height: 18px;
         }
     }
         
