--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="ad.size" content="width=298, height=598" />
       
     <title>300-600 kfc</title>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
