--- a/Autoniza/Cube.html
+++ b/Autoniza/Cube.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="ad.size" content="width=300, height=250" />
 <title>HTML5 STUDIO BUILDER: 3D Box v 1.5</title>
 
 <!-- Adform API Script -->
@@ -857,6 +860,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+
+   @media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+    /* iPhone 5 only */
 }
 /*#/#*/
 </style>
