--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -208,8 +208,8 @@
     /* iPhone 5 only */
 }
 
-        @media screen and (max-width: 300px) {
-            .PapaJohnFijo .te-container .te-wrapper {
+        @media screen and (max-width: 350px) {
+            .PapaJohnFijo a:hover .te-container .te-wrapper {
             width: 240px;
             height: 500px;
             background-color: #FFF;
