--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -208,25 +208,10 @@
     /* iPhone 5 only */
 }
 
-        @media screen and (max-width: 350px) {
-            .PapaJohnFijo a:hover .te-container .te-wrapper {
-            width: 240px;
-            height: 500px;
-            background-color: #FFF;
-            overflow-y: auto;
-        }
-
-        .te-cover, .te-transition, .te-images {
-            width: 240px;
-            height: 200px;
-        }
-
-        .botonesparacompartir {
-           width: 240px;
-            height: 70px;
-        }
-    }
-
+@media screen and (device-height: 568px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
+    // css here
+}
+       
         .cta {
             position: absolute;
             top: 345px;
