--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -204,13 +204,11 @@
         }
 
 
-         @media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+         @media only screen and (min-device-width: 560px) and (orientation: portrait) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
     /* iPhone 5 only */
 }
 
-@media screen and (device-height: 568px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
-    // css here
-}
+
        
         .cta {
             position: absolute;
