--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -208,7 +208,13 @@
     /* iPhone 5 only */
 }
 
-
+ @media screen and (max-width: 300px) {
+        .PapaJohnFijo .te-container {
+            width: 300px;
+            height: 560px;
+            background-color: #FFF;
+            overflow-y: auto;
+        }
        
         .cta {
             position: absolute;
