--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -215,8 +215,12 @@
             background-color: #FFF;
             overflow-y: auto;
         }
+
+    }
+
+
        
-        .cta {
+        .PapaJohnFijo .cta {
             position: absolute;
             top: 345px;
             width: 145px;
