--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -9,6 +9,11 @@
     <title>Autoniza</title>
     <style>
 
+
+    ::-webkit-scrollbar { 
+    display: none; 
+}
+
         @media(min-width: 500px){
             .te-container{
             width: 300px !important; 
@@ -21,6 +26,8 @@
             text-decoration: none;
             color: white
         }
+
+
 
         .PapaJohnFijo .te-container {
             width: 100%;
