--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <style>
 
-        
+         body::-webkit-scrollbar { 
+    display: none !important; 
+}
 
         body.value {
             background-color: #FFFFFF;
