--- a/Autoniza/fade-completo.html
+++ b/Autoniza/fade-completo.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900" rel="stylesheet">
     <style>
 
-         body::-webkit-scrollbar { 
+        body::-webkit-scrollbar { 
     display: none !important; 
 }
 
@@ -53,11 +53,13 @@
 
         @media(min-width: 500px){
             .value .te-container {
-            width: 300px; 
+            width: 300px;
+            min-width: 300px; 
         }
 
             body:before{
             width: 300px !important;
+            min-width: 300px; 
         }
         }
         
@@ -75,21 +77,25 @@
          
         .value_wrapper.size_300x250 {
             width: 298px;
+            min-width: 298px; 
             height: 248px;
         }
 
         .value_wrapper.size_320x480 {
             width: 298px;
+            min-width: 298px; 
             height: 598px;
         }
 
         .value_wrapper.size_320x50 {
             width: 300px;
+            min-width: 300px; 
             height: 48px;
         }
 
         .value_wrapper.size_728x90 {
             width: 300px;
+            min-width: 300px; 
             height: 88px;
         }
 
