--- a/Autoniza/Cube.html
+++ b/Autoniza/Cube.html
@@ -510,13 +510,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 270px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 82px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 211px; height: 58px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 76px) rotate(0deg);
 }
 /*#/#*//*#i4.i236.image.css:image/base/css*/
 #i236 { opacity: 1; }
@@ -530,20 +530,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 264px; height: 141px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 329px; height: 161px;
+        -ms-transform: translate(0, 0) translate(-27px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-27px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-27px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(-27px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i262.image.css:image/base/css*/
 #i262 { opacity: 1; }
 /*#/#*//*#i262.i263.positioning.css:positioning/base/css.2*/
 #i262 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
-        -ms-transform: translate(0, 0) translate(48px, 118px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(48px, 118px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(48px, 118px) rotate(0deg);
-        transform: translate(0, 0) translate(48px, 118px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(60px, 133px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(60px, 133px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(60px, 133px) rotate(0deg);
+        transform: translate(0, 0) translate(60px, 133px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -738,19 +738,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i260 { opacity: 1; }
 /*#/#*//*#i260.i261.positioning.css:positioning/base/css.2*/
 #i260 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 141px; height: 11px;
-        -ms-transform: translate(0, 0) translate(113px, 226px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(113px, 226px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(113px, 226px) rotate(0deg);
-        transform: translate(0, 0) translate(113px, 226px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(116px, 231px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(116px, 231px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(116px, 231px) rotate(0deg);
+        transform: translate(0, 0) translate(116px, 231px) rotate(0deg);
 }
 /*#/#*//*#i5.i264.image.css:image/base/css*/
 #i264 { opacity: 1; }
 /*#/#*//*#i264.i265.positioning.css:positioning/base/css.2*/
 #i264 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
-        -ms-transform: translate(0, 0) translate(53px, 88px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(53px, 88px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(53px, 88px) rotate(0deg);
-        transform: translate(0, 0) translate(53px, 88px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(70px, 97px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(70px, 97px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(70px, 97px) rotate(0deg);
+        transform: translate(0, 0) translate(70px, 97px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -779,20 +779,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 264px; height: 141px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 302px; height: 161px;
+        -ms-transform: translate(0, 0) translate(0px, -14px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -14px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -14px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -14px) rotate(0deg);
 }
 /*#/#*//*#i6.i196.text.css:text/base/css*/
 #i196 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
-#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 227px; height: 50px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 64px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 64px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 64px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 64px) rotate(0deg);
+#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 216px; height: 50px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 70px) rotate(0deg);
 }
 /*#/#*//*#i6.i246.image.css:image/base/css*/
 #i246 { opacity: 1; }
@@ -807,10 +807,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i268 { opacity: 1; }
 /*#/#*//*#i268.i269.positioning.css:positioning/base/css.2*/
 #i268 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
-        -ms-transform: translate(0, 0) translate(65px, 119px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 119px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 119px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 119px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(70px, 125px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(70px, 125px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(70px, 125px) rotate(0deg);
+        transform: translate(0, 0) translate(70px, 125px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -1190,7 +1190,7 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
+data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i4.i262.image.meta:image/meta*/
 name: w5JfzvW.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
