--- a/Autoniza/Cube.html
+++ b/Autoniza/Cube.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, user-scalable=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <title>HTML5 STUDIO BUILDER: 3D Box v 1.5</title>
 
@@ -924,6 +926,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 </style>
 <!--#/#--></head>
 <body>
+     <div id="adf-cube">
+        <div style="width: 100%; height: 100%; background:white;"></div>
+        <div style="width: 100%; height: 100%; background: white;"></div>
+        <div style="width: 100%; height: 100%; background: white;"></div>
+        </div>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i8.font.html:font/html-->
 <!--#/#--><!--#i2.cube.html:cube/html.1-->
 <div style="overflow: visible" id="i2" class="shape-holder">
