cube pareja responsive

--- a/Xcaret3/fade-completo.html
+++ b/Xcaret3/fade-completo.html
@@ -91,7 +91,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/m33FIyY.png");
+            background: url("https://i.imgur.com/dxMpOba.png");
             background-size: cover;
           
         }
