--- a/Autoniza/fade.html
+++ b/Autoniza/fade.html
@@ -7,12 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="ad.size" content="width=320, height=480" />
     <title>300x600 - minino</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:300,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Trebuchet MS:300,700,900" rel="stylesheet">
     <style>
+
+     ::-webkit-scrollbar { 
+    display: none; 
+}
+
+        @media(min-width: 500px){
+           .tgx {
+            width: 300px !important; 
+        }
+        }
+
         body.tgx {
             background-color: #FFFFFF;
             color: black;
-            font-family: 'Oswald', sans-serif;
+            font-family: 'trebuchet MS', sans-serif;
             margin: 0;
             padding: 0;
         }
@@ -31,22 +42,22 @@
         }
 
         .tgx_wrapper.size_300x250 {
-            width: 298px;
+            width: 100%;
             height: 248px;
         }
 
         .tgx_wrapper.size_320x480 {
-            width: 298px;
+            width: 100%;
             height: 598px;
         }
 
         .tgx_wrapper.size_320x50 {
-            width: 318px;
+            width: 100%px;
             height: 48px;
         }
 
         .tgx_wrapper.size_728x90 {
-            width: 726px;
+            width: 100%px;
             height: 88px;
         }
 
