--- a/Autoniza/Video-Geo.html
+++ b/Autoniza/Video-Geo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="ad.size" content="width=298, height=598" />
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Trebuchet MS:400,400i,700,700i' rel='stylesheet' type='text/css'>
     <title>Autoniza</title>
     <style>
 
@@ -42,7 +42,7 @@
             width: 100%;
             height: 600px;
             overflow: hidden;
-            font-family: Oswald;
+            font-family: Trebuchet MS;
         }
 
         .PapaJohnFijo .bzm_text {
@@ -201,7 +201,7 @@
             cursor: pointer;
             opacity: 1;
             background-color: #9d32b1;
-            font-family: "Oswald";
+            font-family: "Trebuchet MS";
             font-size: 14px;
             color: #ffffff;
             font-weight: bold;
@@ -323,7 +323,7 @@
                 
                 <div style="margin-top:100px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:30px; margin-left:0px; margin-right:0px;text-align: left; width: 90%;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:29px; margin-left:0px; margin-right:0px;text-align: left; width: 90%;">
 						    Solo una vida, para qué soñarla si puedes tenerla.
 						</span>
                        <span class="bzm_text_medium" style="color: black;line-height:em; font-size:17px; width:95%; text-align:justify;">
