--- a/Autoniza/index.html
+++ b/Autoniza/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title>HTML5 STUDIO BUILDER: 3D Box v 1.8</title>
+ <meta name="viewport" content="width=device-width, user-scalable=no">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 <meta charset="UTF-8">
 
 <!-- Adform API Script -->
