--- a/Autoniza/fade.html
+++ b/Autoniza/fade.html
@@ -15,7 +15,7 @@
 }
 
         @media(min-width: 500px){
-           .tgx {
+           .tgx  .tgx_wrapper{
             width: 298px !important; 
         }
         }
