--- a/Xcaret3/fade-completo.html
+++ b/Xcaret3/fade-completo.html
@@ -344,15 +344,15 @@
 
         @media screen and (max-width: 300px) {
             .value .te-container .value_wrapper {
-            width: 240px;
-            height: 500px;
+            width: 100%;
+            height: 100%;
             background-color: #FFF;
             overflow-y: auto;
         }
 
         .value_cover {
-            width: 240px;
-            height: 400px;
+            width: 100%;
+            height: 100%x;
         }
 
         .botonesparacompartir {
