--- a/Xcaret3/ZoomExp300x600.html
+++ b/Xcaret3/ZoomExp300x600.html
@@ -65,7 +65,7 @@ a {text-decoration: none;}
             width: 105px;
             line-height: 1em;
             z-index: 5;
-            margin-left: 80px;
+            margin-left: 90px;
            
             background-color: #e11f8f;
             padding: 5px;
@@ -166,7 +166,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:AvenirLTStd-Book; color:#645546; font-size:25px;  text-decoration: none;">Déjate consentir con una experiencia inolvidable.</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:AvenirLTStd-Book; color:#645546; font-size:25px;  text-decoration: none;">Más que un hotel, es una experiencia.</span><br>
 
                    
                    </div>
