--- a/Autoniza/Fade-Geo.html
+++ b/Autoniza/Fade-Geo.html
@@ -274,7 +274,7 @@
                 
                 <div style="margin-top:100px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:19px; margin-left:0px; margin-right:0px;text-align: left; width: 90%;">
+                        <span class="bzm_text_title  bzm_text_bold" style="color: #808285;line-height:1.1; font-size:19px; margin-left:0px; margin-right:0px;text-align: left; width: 90%;">
 						   Este puedes ser tú viajando en la Chevrolet Traverse, o disfrutando al máximo en una Trailblazer.
 						</span>
                        <span class="bzm_text_medium" style="color: black;line-height:em; font-size:17px; width:95%; text-align:justify;">
