--- a/McDonald/hover-text-big2.html
+++ b/McDonald/hover-text-big2.html
@@ -103,13 +103,13 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/3FBkkpU.gif">
+                <img src="https://i.imgur.com/BlhVLMw.gif">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/yJNPKBKPDpF2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/N77EMqZ.png"> </a></div>
+                <a href="https://goo.gl/maps/eY9QrDHjfZT2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/aPx2p5l.jpg"> </a></div>
 
              
 
