--- a/Formatos ADS/STORY HOVER XPAND/hover-text-big2.html
+++ b/Formatos ADS/STORY HOVER XPAND/hover-text-big2.html
@@ -68,10 +68,11 @@
     width: 100%;
 }
 .card .details {
+    width: 100%;
     background: none;
     top: 0;
     left: 100%;
-    padding: 60px 30px;
+   
 }
 /*.card:hover .details {
     top: 0;
@@ -119,7 +120,7 @@
             <div class="details">
                 
 
-               <iframe  src="story-resize.html" width="300" height="600" frameborder="0" scrolling="yes" align="center";"></iframe>
+               <iframe  src="story-resize.html" width="305" height="605" frameborder="0" scrolling="no" position="absolute"></iframe>
             </div>
 
 
